# VMath

./: .gitmodules  CMakeLists.txt
include/: Constants.h  Mat3.h  Vec3.h
src/: Mat3.cpp  Vec3.cpp
test/: CMakeLists.txt  Vec3Test.cpp
